A few bugfixes for the S2 editor.
 * It now works sensibly in Opera. (Yay! Fanfare! etc)
 * Fixed the daft bug in IE where dragging the bars caused everything to get selected
 * Don't force a particular set of fonts for the editor. It was just forcing the defaults anyway.
 * The editor and reference pane no longer wrap. Wrapping source code makes it hard to read, and the reference pane just looked daft when the stuff inside was wrapped.

This is tested in IE for Windows, Mozilla and Opera. I don't have a Mac, so I've not tested in Safari or MacIE.
Given that this code is held together with gaffer tape and chewing gum, it's probably worth testing it on a Mac as it might well have gone crazy.



git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@7403 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/s2edit.css
+++ b/htdocs/stc/s2edit.css
@@ -60,10 +60,7 @@ div.reference {
 	border-top: solid #808080 1px;
 	border-right: solid #808080 1px;
 	border-left: solid #808080 1px;
-	overflow: scroll;
-	overflow-x: none;
-	overflow-y: scroll;
-	overflow: -moz-scrollbars-vertical;
+	overflow: auto;
 }
 
 div.tabs {
@@ -127,15 +124,14 @@ div.main {
 textarea.maintext {
 	position: absolute;
 	border: solid #808080 1px;
-	font-family: Monaco, Courier New, Courier, monospace;
+	font-family: monospace;
 	font-size: 8pt;
 	bottom: 0px;
 	right: 0px;
 	top: 0px;
 	left: 0px;
 	height: 100%;
-	width: auto;
-	padding: 0px 6px 0px 6px;
+	width: 100%;
 }
 
 div.output {
@@ -274,3 +270,7 @@ a:hover {
 .refinvisible {
 	display: none;
 }
+.refvisible {
+	white-space: nowrap;
+}
+
